--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ li {
 }
 .SidebarButton {
   position: absolute;
-  right: 10px;
+  left: 10px;
   top: 20px;
   background-color: (76, 143, 214, 0.4);
   padding: 1%;
